--- a/src/test/java/enviornmentvariables/config.properties
+++ b/src/test/java/enviornmentvariables/config.properties
@@ -1,4 +1,7 @@
 browser=ChromeDriver
-url=https://opensource-demo.orangehrmlive.com/web/index.php/auth/login
-username=ADMIN
-password=Admin123
+#url=https://opensource-demo.orangehrmlive.com/web/index.php/auth/login
+#username=ADMIN
+#password=Admin123
+url=http://demo.sentrifugo.com/index.php/
+username=EM01
+password=sentrifugo
