--- a/pom.xml
+++ b/pom.xml
@@ -24,12 +24,12 @@
 		    <artifactId>testng</artifactId>
 		    <version>7.1.0</version>
 		    <scope>test</scope>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml-schemas -->
+		</dependency>		
+		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
 		<dependency>
 		    <groupId>org.apache.poi</groupId>
-		    <artifactId>poi-ooxml-schemas</artifactId>
-		    <version>4.1.2</version>
+		    <artifactId>poi-ooxml</artifactId>
+		    <version>5.2.3</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/com.guicedee.services/apache-poi-ooxml -->
 		<dependency>
